# webshell_bert_detect

./: .gitignore  1.sh  MODEL_CARD.md  README.md  main.py  pyproject.toml  upload_card.py  upload_model.py
dataset/: check_dup.py  crawl.py  data_other.py  data_php.py  data_webshell.py  filter.py  php.py  php_opcode.py  pro_opcode.py  upload.py  webshell.py
dataset/docker/: php-vld.dockerfile
dataset/manual/: README.md
server/: database.py  docker-compose.yml  route.py  server.py
server/sql/: init.sql
server/templates/: detail.html  login.html  warning_list.html
src/full/: test.py  train.py  upload_dataset.py
src/full/logs/: events.out.tfevents.1746591337.dell  events.out.tfevents.1746595290.dell  events.out.tfevents.1747028922.autodl-container-e20e41a3dd-3898fd4a  events.out.tfevents.1747030019.autodl-container-e20e41a3dd-3898fd4a
src/full_stu/: test.py  train.py
src/full_tiny/: collect.py  test.py  train.py
src/full_tiny/logs/: events.out.tfevents.1747034661.autodl-container-e20e41a3dd-3898fd4a  events.out.tfevents.1747035316.autodl-container-e20e41a3dd-3898fd4a
src/php_opcode/: extract_opcode.py  php_opcode.py
src/php_raw/: collect.py  test.py  train.py
src/php_raw/logs/: events.out.tfevents.1744976083.dell  events.out.tfevents.1744979235.dell  events.out.tfevents.1746992902.autodl-container-b1f2438ea7-bd5d645a  events.out.tfevents.1746993790.autodl-container-b1f2438ea7-bd5d645a
src/php_stu/: test.py  train.py
src/php_tiny/: collect.py  test.py  train.py
src/raw_php/: test.py
src/stu_php/: train.py
src/tiny/: test.py  train.py
(+161 files in other folders)
