[project]
name = "webshell-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "transformers[torch]>=4.51.3",
]
